fix(todomvc): remove align-items: center from header to allow input to stretch and show padding

--- a/examples/todomvc/src/todomvc.css
+++ b/examples/todomvc/src/todomvc.css
@@ -25,7 +25,6 @@
 .header {
   display: flex;
   flex-direction: column;
-  align-items: center;
   padding-top: 12px;
 }
 
